crates/credential/tests/probes/cred_attr_unrecognized_method.stderr
error: unrecognized method `refrsh` in #[credential] impl — move inherent helpers to a separate `impl` block. Recognized methods: metadata, project, resolve, refresh, revoke, test, continue_resolve, release, policy
  --> tests/probes/cred_attr_unrecognized_method.rs:40:14
   |
40 |     async fn refrsh(
   |              ^^^^^^
